--- a/Dissertation/AppTemplate/AppTemplate.csproj
+++ b/Dissertation/AppTemplate/AppTemplate.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Activity1.cs" />
+    <Compile Include="ComputeFunction\IComputeService.cs" />
     <Compile Include="IComputeActivity.cs" />
     <Compile Include="ComputeFunction\ComputeService.cs" />
     <Compile Include="ComputeFunction\ComputeServiceBinder.cs" />
