--- a/Dissertation/ComputeAndroidApp/Properties/AndroidManifest.xml
+++ b/Dissertation/ComputeAndroidApp/Properties/AndroidManifest.xml
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" android:installLocation="internalOnly" package="com.ComputeAndroidApp">
-	<application>
-		<!--<receiver android:name=".computeandroidapp.backgroundservice.servicereceiver3453">
+  <application android:label="App">
+    <!--<receiver android:name=".computeandroidapp.backgroundservice.servicereceiver3453">
 			<intent-filter>
 				<action android:name="android.intent.action.BOOT_COMPLETED" />
 			</intent-filter>
 		</receiver> -->
-	</application>
+  </application>
   <permission android:name="com.ComputeAndroidApp.permission.C2D_MESSAGE" android:protectionLevel="signature" />
   <uses-permission android:name="android.permission.GET_ACCOUNTS" />
   <uses-permission android:name="android.permission.INTERNET" />
@@ -14,8 +14,7 @@
   <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
   <uses-permission android:name="android.permission.WAKE_LOCK" />
   <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-  <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="8" />
-
+  <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="14" />
   <!--<receiver
 				android:name="ComputeAndroidApp.BroadcastReciever"
 				android:permission="com.google.android.c2dm.permission.SEND" >
