--- a/Dissertation/App1/App1/Background.csproj
+++ b/Dissertation/App1/App1/Background.csproj
@@ -68,6 +68,12 @@
   <ItemGroup>
     <Content Include="Properties\AndroidManifest.xml" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\SharedDevClasses\SharedDevClasses.csproj">
+      <Project>{1c1a4636-8b84-4da3-9965-9cf97e3c5a97}</Project>
+      <Name>SharedDevClasses</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Novell\Novell.MonoDroid.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
      Other similar extension points exist, see Microsoft.Common.targets.
