--- a/Dissertation/App1/App1/Background.csproj
+++ b/Dissertation/App1/App1/Background.csproj
@@ -51,7 +51,8 @@
     <Compile Include="IncomingReceiver.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Singleton.cs" />
+    <Compile Include="WorkerClass.cs" />
+    <Compile Include="WorkList.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
