--- a/Dissertation/MandelbrotApp/MandelbrotApp.csproj
+++ b/Dissertation/MandelbrotApp/MandelbrotApp.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Background\MandelbrotCalculator.cs" />
+    <Compile Include="UI\AsyncGetResultsTask.cs" />
     <Compile Include="UI\MandelbrotDrawActivity.cs" />
     <Compile Include="UI\App.cs" />
     <Compile Include="UI\IncomingReceiver.cs" />
