--- a/Dissertation/ComputeAndroidApp/MainApp.csproj
+++ b/Dissertation/ComputeAndroidApp/MainApp.csproj
@@ -125,6 +125,9 @@
     <None Include="Web References\UserWS\UserSvc1.xsd">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Web References\WorkOrderWS\CommunicationPackage.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
     <None Include="Web References\WorkOrderWS\Reference.map">
       <Generator>MSDiscoCodeGenerator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
@@ -143,6 +146,9 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="Web References\WorkOrderWS\WorkOrderSvc2.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Web References\WorkOrderWS\WorkOrderSvc3.xsd">
       <SubType>Designer</SubType>
     </None>
     <None Include="Web References\WorkOrderWS\WorkOrderTrimmed.datasource">
