--- a/Dissertation/ComputeAndroidApp/MainApp.csproj
+++ b/Dissertation/ComputeAndroidApp/MainApp.csproj
@@ -125,6 +125,9 @@
     <None Include="Web References\UserWS\UserSvc1.xsd">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Web References\UserWS\UserSvc2.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Web References\WorkOrderWS\CommunicationPackage.datasource">
       <DependentUpon>Reference.map</DependentUpon>
     </None>
