--- a/Dissertation/WebService/Web.config
+++ b/Dissertation/WebService/Web.config
@@ -39,6 +39,16 @@
 					<serviceMetadata httpGetEnabled="true" />
 					<!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
 					<serviceDebug includeExceptionDetailInFaults="true" />
+
+
+					
+				</behavior>
+
+				<behavior name="Throttled">
+					<serviceThrottling
+					  maxConcurrentCalls="1000000"
+					  maxConcurrentSessions="1000000"
+					  maxConcurrentInstances="1000000" />
 				</behavior>
 			</serviceBehaviors>
 		</behaviors>
