--- a/Dissertation/WebService/Web.config
+++ b/Dissertation/WebService/Web.config
@@ -32,6 +32,13 @@
 		<httpRuntime executionTimeout="600000" maxRequestLength="2147483647" />
 	</system.web>
 	<system.serviceModel>
+		<bindings>
+			<basicHttpBinding>
+				<binding maxReceivedMessageSize="10485760">
+					<!--<readerQuotas maxStringContentLength=""-->
+				</binding>
+			</basicHttpBinding>
+		</bindings>
 		<behaviors>
 			<serviceBehaviors>
 				<behavior>
@@ -40,8 +47,6 @@
 					<!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
 					<serviceDebug includeExceptionDetailInFaults="true" />
 
-
-					
 				</behavior>
 
 				<behavior name="Throttled">
