--- a/Dissertation/MandelbrotApp/MandelbrotApp.csproj
+++ b/Dissertation/MandelbrotApp/MandelbrotApp.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Background\AsyncCalculateResult.cs" />
     <Compile Include="Background\ColourScheme.cs" />
     <Compile Include="Background\IncomingReceiver.cs" />
     <Compile Include="Background\ResultPackage.cs" />
